# advent-of-code

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
jvm/: resources  (+1 more)
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  util.rs
rust/src/testing/: mod.rs  test_helpers.rs
rust/src/util/: array_bounded.rs  bounded.rs  coordinates.rs  direction.rs  mod.rs  parse_num.rs
rust/src/util/collections/: heap.rs
rust/src/y2023/d01/: mod.rs  trebutchet.rs
rust/src/y2023/d02/: cube_conumdrum.rs  mod.rs
rust/src/y2024/: mod.rs
rust/src/y2024/d01/: historian_hysteria.rs  mod.rs
rust/src/y2024/d02/: mod.rs  red_nosed_reports.rs
rust/src/y2024/d03/: mod.rs  mull_it_over.rs
rust/src/y2024/d04/: ceres_search.rs  ceres_search_collecting.rs  ceres_search_cross_mas.rs  ceres_search_simple.rs  ceres_search_xmas.rs  mod.rs
rust/src/y2024/d05/: mod.rs  print_queue.rs
rust/src/y2024/d06/: gallivant_guard.rs  mod.rs
rust/src/y2024/d07/: bridge_repair.rs  mod.rs
rust/src/y2024/d08/: mod.rs  resonant_collinearity.rs
rust/src/y2024/d09/: disk_fragmenter.rs  disk_fragmenter_linked_list.rs  helper.rs  mod.rs
rust/src/y2024/d10/: hoof_it.rs  mod.rs
rust/src/y2024/d11/: mod.rs  plutonian_pebbles.rs  plutonian_peebles.rs
rust/src/y2024/d12/: garden_groups.rs  mod.rs
rust/src/y2024/d13/: claw_contraption.rs  mod.rs
rust/src/y2024/d14/: mod.rs  restroom_redoubt.rs
rust/src/y2024/d15/: mod.rs  warehouse_woes.rs
rust/src/y2024/d16/: mod.rs  reindeer_maze.rs
rust/src/y2024/d17/: chronospatial_computer.rs  mod.rs
rust/src/y2025/: mod.rs
(+289 files in other folders)
