[package]
name = "aoc"
version = "0.1.0"
authors = ["Gabryel"]
edition = "2021"

[profile.release]
debug = true

[profile.test]
inherits = "release"

[dependencies]
regex = "1.11.1"
derive_more = { version = "2.1.0", features = ["display", "from"] }
rustc-hash = "2.1.0"
ibig = "0.3.6"
num-traits = "0.2.19"
forward_ref_generic = "0.2.1"
itertools = "0.14.0"
paste = "1.0.15"

[dev-dependencies]
rstest = "0.26.1"
